Fix mobile navbar
- Fixes spacing issues with nav items being off center
- Fixes nav items leaking past the nav bar
- Updates Bootstrap to version 3.3.7 (custom build with @grid-float-breakpoint=@screen-md-min)

--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,15 @@
 }
 
 .navbar-nav.nav-justified > li {
-  float:none;
+  float: none;
+}
+.nav-justified {
+  width: 0%;
+}
+@media (min-width: 768px) {
+  .nav-justified {
+    width: 100%;
+  }
 }
 
 /* Mast head */
